--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="manifest" href="manifest.json">
     <title>心做资源库</title>
     <style>
         :root { --primary: #00ff88; --bg: #0d1117; --card: #161b22; --text: #c9d1d9; }
